--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
 				margin: 0;
 				padding: 0;
 				background-color: rgba(249,250,255,100);
-			}</style><link href=/static/css/app.ee0bac745b94d400baa7e84ffc5b6ea9.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.6639aefc21ed2c4dc206.js></script><script type=text/javascript src=/static/js/vendor.9f3cf088fd6bced8ab8a.js></script><script type=text/javascript src=/static/js/app.da7a3b670acccb2018e7.js></script></body></html>
+			}</style><link href=./static/css/app.ee0bac745b94d400baa7e84ffc5b6ea9.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.6639aefc21ed2c4dc206.js></script><script type=text/javascript src=./static/js/vendor.9f3cf088fd6bced8ab8a.js></script><script type=text/javascript src=./static/js/app.da7a3b670acccb2018e7.js></script></body></html>
